--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FMP-NA</title>
+    <meta name="google-site-verification" content="K2JVyQ3p-n34My-kIDS6cf71wXRV7LfuvXnRg5rLzrU" />
     <link rel="stylesheet" href="css/modules.css">
     <!-- Подключение главного CSS-файла -->
     <link rel="stylesheet" href="css/style.min.css">
